@@ -1,3 +1,4 @@
+2008-12-16 Another attempt to fix dpi-dependent behavior of Legend. -JJL
 
 2008-12-16 Fixed dpi-dependent behavior of Legend and fancybox in Text.
 
